--- a/client/main.css
+++ b/client/main.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-image: linear-gradient(to bottom, #5f0f85, #610909 100%);
   background-attachment: fixed;
 
   position: absolute;
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
   min-height: 100%;
   background: white;
@@ -26,7 +26,7 @@ body {
 
 header {
   background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
+  background-image: linear-gradient(to bottom, #97def1, #b7c4e9 100%);
   padding: 20px 15px 15px 15px;
   position: relative;
 }
@@ -82,11 +82,11 @@ li {
   position: relative;
   list-style: none;
   padding: 15px;
-  border-bottom: #eee solid 1px;
+  border-bottom: rgb(#eee) solid 1px;
 }
 
 li .text {
-  margin-left: 10px;
+  margin-left: 5px;
 }
 
 li.checked {
